# pyq-analyzer

./: .gitignore  README.md  app.py  project_tech_details.json  pyproject.toml  requirements.txt
data/outputs/run_20260328_115241/: analysis_summary.json  question_topic_mapping.csv  topic_predictions.csv
src/exam_topic_predictor/: __init__.py  cli.py  config.py  embeddings.py  pipeline.py  schemas.py  text_utils.py
src/exam_topic_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/exam_topic_predictor/io/: __init__.py  pdf_reader.py
src/exam_topic_predictor/mapping/: __init__.py  topic_mapper.py
src/exam_topic_predictor/modeling/: __init__.py  question_pattern_miner.py  topic_forecaster.py
src/exam_topic_predictor/parsing/: __init__.py  question_parser.py  syllabus_parser.py  topic_cleaner.py
src/exam_topic_predictor/reporting/: __init__.py  report_writer.py
tests/: test_pipeline.py  test_question_parser.py  test_syllabus_parser.py  test_topic_forecaster.py
